envoy_samples/envoy_list_clust.json
{
  "listeners": [
   {
    "address": "tcp://0.0.0.0:15001",
    "name": "virtual",
    "filters": [],
    "bind_to_port": true,
    "use_original_dst": true
   },
   {
    "address": "tcp://0.0.0.0:80",
    "name": "http_0.0.0.0_80",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "80",
        "refresh_delay_ms": 60000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/tmp/a"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:8000",
    "name": "http_0.0.0.0_8000",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "8000",
        "refresh_delay_ms": 60000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/tmp/a"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:8080",
    "name": "http_0.0.0.0_8080",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "8080",
        "refresh_delay_ms": 60000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/tmp/a"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:8081",
    "name": "http_0.0.0.0_8081",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "8081",
        "refresh_delay_ms": 60000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/tmp/a"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:8088",
    "name": "http_0.0.0.0_8088",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "8088",
        "refresh_delay_ms": 60000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/tmp/a"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:9411",
    "name": "http_0.0.0.0_9411",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "9411",
        "refresh_delay_ms": 60000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/tmp/a"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.128.0.5:8000",
    "name": "http_10.128.0.5_8000",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "route_config": {
        "virtual_hosts": [
         {
          "name": "inbound|8000",
          "domains": [
           "*"
          ],
          "routes": [
           {
            "prefix": "/",
            "cluster": "in.8000",
            "opaque_config": {
             "mixer_control": "on",
             "mixer_forward": "off"
            }
           }
          ]
         }
        ]
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/tmp/a"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.240.1:443",
    "name": "tcp_10.23.240.1_443",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.64a5722ae8d6cfbb7c8968b6de8ce26c7c7dd032",
          "destination_ip_list": [
           "10.23.240.1/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.161:443",
    "name": "tcp_10.23.243.161_443",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.085861efa91e0636afefc66e54e5bb33fe2239ff",
          "destination_ip_list": [
           "10.23.243.161/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:42422",
    "name": "tcp_10.23.243.41_42422",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.a49404239b7341d522ab5653b862be41fc02c06c",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:8080",
    "name": "tcp_10.23.243.41_8080",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.e7806d18cf47a495ba0728f7174f385c9c507720",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9001",
    "name": "tcp_10.23.243.41_9001",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.25a1a9a34ddf5dbc7797b6bb77c660ea5d6a1e4b",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9090",
    "name": "tcp_10.23.243.41_9090",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.5c016f2d2e2d3e962a6e31bbdf6a85bc09d219f7",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9091",
    "name": "tcp_10.23.243.41_9091",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.f304b28d7cb12017c731fd67b78c9c87924b8fde",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9094",
    "name": "tcp_10.23.243.41_9094",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.4cd54daeea2a7b6b0a99e1ce9239a17575d26a46",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9102",
    "name": "tcp_10.23.243.41_9102",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.4eeeb6134ebc82c6765c53bbb421488179cffd03",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.246.138:42422",
    "name": "tcp_10.23.246.138_42422",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.c585980af0793384480c7998912f77c2c410e26c",
          "destination_ip_list": [
           "10.23.246.138/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.246.138:9091",
    "name": "tcp_10.23.246.138_9091",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.f576d95a3e0e7f57142daccfd0834b399ef96dfe",
          "destination_ip_list": [
           "10.23.246.138/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.246.138:9094",
    "name": "tcp_10.23.246.138_9094",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.613663238fb620535d24aaf4ed1131d32b9e52e7",
          "destination_ip_list": [
           "10.23.246.138/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.247.132:8000",
    "name": "tcp_10.23.247.132_8000",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.1280abe8bec2fab497193042d93514356521669a",
          "destination_ip_list": [
           "10.23.247.132/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.249.119:80",
    "name": "tcp_10.23.249.119_80",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.1b33d702979c352c8053a70beacf409f024e98eb",
          "destination_ip_list": [
           "10.23.249.119/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.250.94:3000",
    "name": "tcp_10.23.250.94_3000",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.2c4950712045e0d7cab567406a89589a45402b30",
          "destination_ip_list": [
           "10.23.250.94/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.252.199:8080",
    "name": "tcp_10.23.252.199_8080",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.b9535e6694323543677e0f181d314a2624dcae6f",
          "destination_ip_list": [
           "10.23.252.199/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.252.83:9090",
    "name": "tcp_10.23.252.83_9090",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.12f3dd72236b695f073a0aefd003f84ed1166ec6",
          "destination_ip_list": [
           "10.23.252.83/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   }
  ],

  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:9001"
  },
  "cluster_manager": {
    "clusters": [
   {
    "name": "in.8000",
    "connect_timeout_ms": 60000,
    "type": "static",
    "lb_type": "round_robin",
    "hosts": [
     {
      "url": "tcp://127.0.0.1:8000"
     }
    ]
   },
   {
    "name": "mixer_server",
    "connect_timeout_ms": 60000,
    "type": "strict_dns",
    "lb_type": "round_robin",
    "hosts": [
     {
      "url": "tcp://mixer:9091"
     }
    ],
    "features": "http2",
    "circuit_breakers": {
     "default": {
      "max_pending_requests": 10000,
      "max_requests": 10000
     }
    }
   },
   {
    "name": "out.01b3502fc7b29750c3b185358aec68fcbb4b9cf6",
    "service_name": "istio-pilot.default.svc.cluster.local|http-discovery",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.042f561d6007351c54657066df505a4e37433a8e",
    "service_name": "my-service.default.svc.cluster.local|http",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.085861efa91e0636afefc66e54e5bb33fe2239ff",
    "service_name": "istio-ingress.default.svc.cluster.local|https",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.1280abe8bec2fab497193042d93514356521669a",
    "service_name": "mixer-ilb.default.svc.cluster.local",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.12f3dd72236b695f073a0aefd003f84ed1166ec6",
    "service_name": "prometheus.default.svc.cluster.local|prometheus",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.1b33d702979c352c8053a70beacf409f024e98eb",
    "service_name": "istio-egress.default.svc.cluster.local",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.25a1a9a34ddf5dbc7797b6bb77c660ea5d6a1e4b",
    "service_name": "nginx.default.svc.cluster.local|envoyadmin",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.2c4950712045e0d7cab567406a89589a45402b30",
    "service_name": "grafana.default.svc.cluster.local|grafana",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.4205d7a46b381fa61a80695e535209023019b246",
    "service_name": "nginx.default.svc.cluster.local|http",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.4cd54daeea2a7b6b0a99e1ce9239a17575d26a46",
    "service_name": "nginx.default.svc.cluster.local|mixerconf",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.4eeeb6134ebc82c6765c53bbb421488179cffd03",
    "service_name": "nginx.default.svc.cluster.local|envoystatsd",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.5c016f2d2e2d3e962a6e31bbdf6a85bc09d219f7",
    "service_name": "nginx.default.svc.cluster.local|prom",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.613663238fb620535d24aaf4ed1131d32b9e52e7",
    "service_name": "istio-mixer.default.svc.cluster.local|configapi",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.64a5722ae8d6cfbb7c8968b6de8ce26c7c7dd032",
    "service_name": "kubernetes.default.svc.cluster.local|https",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.96c4dfcd665fa0caf6f48ab026e4263d1d17bac2",
    "service_name": "istio-pilot.default.svc.cluster.local|http-apiserver",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.9d29c4ef2e1e1b4827148cd5a71fab978e90918a",
    "service_name": "justhello.default.svc.cluster.local|http",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.a49404239b7341d522ab5653b862be41fc02c06c",
    "service_name": "nginx.default.svc.cluster.local|mixerprom",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.b9535e6694323543677e0f181d314a2624dcae6f",
    "service_name": "istio-pilot-ilb.default.svc.cluster.local",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.c38145e999b9cc753c429c7cb5906247a34f77c9",
    "service_name": "servicegraph.default.svc.cluster.local|http",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.c585980af0793384480c7998912f77c2c410e26c",
    "service_name": "istio-mixer.default.svc.cluster.local|prometheus",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.d4b7b8f0956df1349295f2961f70aebc9f6647aa",
    "service_name": "nginxistio.default.svc.cluster.local|http",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.e5c9564b7c4dbb0355a4f740e9d29277ccca97cd",
    "service_name": "hello.default.svc.cluster.local|http",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.e7806d18cf47a495ba0728f7174f385c9c507720",
    "service_name": "nginx.default.svc.cluster.local|manager",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.ed7dceb7d7133b12d471052b173524b21fa6ad70",
    "service_name": "zipkin.default.svc.cluster.local|http",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.f304b28d7cb12017c731fd67b78c9c87924b8fde",
    "service_name": "nginx.default.svc.cluster.local|mixer",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },
   {
    "name": "out.f576d95a3e0e7f57142daccfd0834b399ef96dfe",
    "service_name": "istio-mixer.default.svc.cluster.local|tcp",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },

   {
    "name": "out.fd518f1d0ba070c47739cbf6b191f85eb1cdda3d",
    "service_name": "istio-ingress.default.svc.cluster.local|http",
    "connect_timeout_ms": 60000,
    "type": "sds",
    "lb_type": "round_robin"
   },

      {
        "name": "rds",
        "connect_timeout_ms": 60000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://istio-pilot:8080"
          }
        ]
      },
      {
        "name": "lds",
        "connect_timeout_ms": 60000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://istio-pilot:8080"
          }
        ]
      }
    ],


    "sds": {
      "cluster": {
        "name": "sds",
        "connect_timeout_ms": 60000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://istio-pilot:8080"
          }
        ]
      },
      "refresh_delay_ms": 6000000
    },
    "cds": {
      "cluster": {
        "name": "cds",
        "connect_timeout_ms": 60000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://istio-pilot:8080"
          }
        ]
      },
      "refresh_delay_ms": 6000000
    }
  }
}
