envoy_samples/listeners.json
{
  "listeners": [
   {
    "address": "tcp://0.0.0.0:15001",
    "name": "virtual",
    "filters": [],
    "bind_to_port": true,
    "use_original_dst": true
   },
   {
    "address": "tcp://0.0.0.0:80",
    "name": "http_0.0.0.0_80",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "80",
        "refresh_delay_ms": 1000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/dev/stdout"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:8000",
    "name": "http_0.0.0.0_8000",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "8000",
        "refresh_delay_ms": 1000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/dev/stdout"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:8080",
    "name": "http_0.0.0.0_8080",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "8080",
        "refresh_delay_ms": 1000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/dev/stdout"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:8081",
    "name": "http_0.0.0.0_8081",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "8081",
        "refresh_delay_ms": 1000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/dev/stdout"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:8088",
    "name": "http_0.0.0.0_8088",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "8088",
        "refresh_delay_ms": 1000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/dev/stdout"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://0.0.0.0:9411",
    "name": "http_0.0.0.0_9411",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "rds": {
        "cluster": "rds",
        "route_config_name": "9411",
        "refresh_delay_ms": 1000
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/dev/stdout"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.128.0.5:8000",
    "name": "http_10.128.0.5_8000",
    "filters": [
     {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
       "codec_type": "auto",
       "stat_prefix": "http",
       "generate_request_id": true,
       "tracing": {
        "operation_name": "ingress"
       },
       "route_config": {
        "virtual_hosts": [
         {
          "name": "inbound|8000",
          "domains": [
           "*"
          ],
          "routes": [
           {
            "prefix": "/",
            "cluster": "in.8000",
            "opaque_config": {
             "mixer_control": "on",
             "mixer_forward": "off"
            }
           }
          ]
         }
        ]
       },
       "filters": [
        {
         "type": "decoder",
         "name": "mixer",
         "config": {
          "mixer_attributes": {
           "target.ip": "10.128.0.5",
           "target.service": "my-service.default.svc.cluster.local",
           "target.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "forward_attributes": {
           "source.ip": "10.128.0.5",
           "source.uid": "kubernetes://hello-3564253481-dvc07.default"
          },
          "quota_name": "RequestCount"
         }
        },
        {
         "type": "decoder",
         "name": "router",
         "config": {}
        }
       ],
       "access_log": [
        {
         "path": "/dev/stdout"
        }
       ]
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.240.1:443",
    "name": "tcp_10.23.240.1_443",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.64a5722ae8d6cfbb7c8968b6de8ce26c7c7dd032",
          "destination_ip_list": [
           "10.23.240.1/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.161:443",
    "name": "tcp_10.23.243.161_443",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.085861efa91e0636afefc66e54e5bb33fe2239ff",
          "destination_ip_list": [
           "10.23.243.161/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:42422",
    "name": "tcp_10.23.243.41_42422",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.a49404239b7341d522ab5653b862be41fc02c06c",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:8080",
    "name": "tcp_10.23.243.41_8080",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.e7806d18cf47a495ba0728f7174f385c9c507720",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9001",
    "name": "tcp_10.23.243.41_9001",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.25a1a9a34ddf5dbc7797b6bb77c660ea5d6a1e4b",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9090",
    "name": "tcp_10.23.243.41_9090",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.5c016f2d2e2d3e962a6e31bbdf6a85bc09d219f7",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9091",
    "name": "tcp_10.23.243.41_9091",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.f304b28d7cb12017c731fd67b78c9c87924b8fde",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9094",
    "name": "tcp_10.23.243.41_9094",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.4cd54daeea2a7b6b0a99e1ce9239a17575d26a46",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.243.41:9102",
    "name": "tcp_10.23.243.41_9102",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.4eeeb6134ebc82c6765c53bbb421488179cffd03",
          "destination_ip_list": [
           "10.23.243.41/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.246.138:42422",
    "name": "tcp_10.23.246.138_42422",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.c585980af0793384480c7998912f77c2c410e26c",
          "destination_ip_list": [
           "10.23.246.138/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.246.138:9091",
    "name": "tcp_10.23.246.138_9091",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.f576d95a3e0e7f57142daccfd0834b399ef96dfe",
          "destination_ip_list": [
           "10.23.246.138/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.246.138:9094",
    "name": "tcp_10.23.246.138_9094",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.613663238fb620535d24aaf4ed1131d32b9e52e7",
          "destination_ip_list": [
           "10.23.246.138/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.247.132:8000",
    "name": "tcp_10.23.247.132_8000",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.1280abe8bec2fab497193042d93514356521669a",
          "destination_ip_list": [
           "10.23.247.132/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.249.119:80",
    "name": "tcp_10.23.249.119_80",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.1b33d702979c352c8053a70beacf409f024e98eb",
          "destination_ip_list": [
           "10.23.249.119/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.250.94:3000",
    "name": "tcp_10.23.250.94_3000",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.2c4950712045e0d7cab567406a89589a45402b30",
          "destination_ip_list": [
           "10.23.250.94/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.252.199:8080",
    "name": "tcp_10.23.252.199_8080",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.b9535e6694323543677e0f181d314a2624dcae6f",
          "destination_ip_list": [
           "10.23.252.199/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   },
   {
    "address": "tcp://10.23.252.83:9090",
    "name": "tcp_10.23.252.83_9090",
    "filters": [
     {
      "type": "read",
      "name": "tcp_proxy",
      "config": {
       "stat_prefix": "tcp",
       "route_config": {
        "routes": [
         {
          "cluster": "out.12f3dd72236b695f073a0aefd003f84ed1166ec6",
          "destination_ip_list": [
           "10.23.252.83/32"
          ]
         }
        ]
       }
      }
     }
    ],
    "bind_to_port": false
   }
  ]
 }
